--- a/page.html
+++ b/page.html
@@ -4,11 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>SANIKA TIKOLE</h1>
-    <hr>
-    <h3>Web Developer</h3>
-    
+    <!-- Header -->
+    <header class="header">
+        <h1>SANIKA TIKOLE</h1>
+        <h2>Web Developer</h2>
+    </header>
+
+    <!-- Main Container -->
+    <div class="container">
+        <!-- Left Panel -->
+        <div class="left-panel">
+            <div class="projects">
+                <h2>PROJECT</h2>
+                <p><strong>Bookstore Website:</strong> Frontend - Login/Signup, Home, Course page. Backend - User data, Store & Book Information.</p>
+                <p><strong>Portfolio Website:</strong> Home - Information, Project - Details with animations.</p>
+            </div>
+            <div class="education">
+                <h2>EDUCATION</h2>
+                <p>SPPU University</p>
+                <p>Progressive Education Society Modern College of Engineering, Pune (2022-2026)</p>
+                <p>SSC Marks: 92%, HSC Marks: 60%, 4th Sem CGPA: 6.18</p>
+            </div>
+            <div class="contact">
+                <h2>CONTACT ME</h2>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:tikolesanika@gmail.com">tikolesanika@gmail.com</a></p>
+                <p>Location: Pune, India</p>
+                <p><i class="fab fa-github"></i> <a href="https://github.com/sanika-tikole/">sanika-tikole</a></p>
+            </div>
+        </div>
+
+        <!-- Right Panel -->
+        <div class="right-panel">
+            <div class="profile">
+                <h2>PROFILE</h2>
+                <p>I am a third-year AIML engineering student with knowledge of web development, frontend (HTML, CSS, JavaScript, Bootstrap, Tailwind), and backend (Node.js, MongoDB).</p>
+            </div>
+            <div class="skills">
+                <h2>SKILLS</h2>
+                <ul>
+                    <li>Basic Python</li>
+                    <li>Web Development</li>
+                    <li>Frontend: HTML, CSS, JavaScript, Bootstrap, Tailwind</li>
+                    <li>Backend: Node.js, MongoDB</li>
+                </ul>
+            </div>
+            <div class="volunteer-experience">
+                <h2>VOLUNTEER EXPERIENCE</h2>
+                <p>Fresher</p>
+            </div>
+            <div class="languages">
+                <h2>LANGUAGES</h2>
+                <ul>
+                    <li>Basic English</li>
+                    <li>Basic Hindi</li>
+                    <li>Fluent Marathi</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
